--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,5 +1,13 @@
 {
+    "build": {
+      "env": {
+        "NODE_ENV": "production"
+      }
+    },
     "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
     ]
   }
